# labs

labs/1labcpp/: CMakeLists.txt
labs/1labcpp/1/: 1v2.cpp  CMakeLists.txt
labs/1labcpp/2/: CMakeLists.txt  main.cpp  task2_class_definition.h  task2_class_realization.cpp
labs/1labcpp/3/: CMakeLists.txt  main.cpp  task3_class_definition.h  task3_class_realization.cpp
labs/1labcpp/4/: CMakeLists.txt  main.cpp  task4_class_definition.h  task4_class_realization.cpp
labs/1labcpp/7/: binomial_heap_API.h  binomial_heap_realization.cpp
labs/2labC/project/: CMakeLists.txt  main.c
labs/2labC/project/10/: CMakeLists.txt  main.c  my_scanf.c  my_scanf.h
labs/2labC/project/11/: main.c  tokenize_realization.c  tokenize_realization.h
labs/2labC/project/12/: main.c  substr_realization.c  substr_realization.h
labs/2labC/project/13/: main.c  sums_decomposition.h  sums_decompositon.c
labs/2labC/project/14/: longest_sawtooth_subsequence.c  longest_sawtooth_subsequence.h  main.c
labs/2labC/project/15/: find_saddle_points.c  find_saddle_points.h  main.c
labs/2labC/project/3/: main.c
labs/2labC/project/4/: main.c
labs/2labC/project/5/: 5.c  main.c
labs/2labC/project/6/: main.c
labs/2labC/project/7/: main.c
labs/2labC/project/9/: main.c  s_f_printf.c  s_f_printf.h
labs/2labcpp/include/: big_int_API.h
labs/2labcpp/src/: big_int.cpp
libc/: CMakeLists.txt  errors.h
libc/src/: CMakeLists.txt  types.c
libs/: memory.h  types.h
libs/src/: memory.c  types.c
